2007-12-17  Matthias Clasen <mclasen@redhat.com>

	* gio/migration.xml: Stub of a migration chapter
	* gio/overview.xml: Stub of an overview
	* gio/gvfs-overview.{odg,png}: Overview diagram taken
	from Alex Guadec slides.

	* gio/Makefile.am:
	* gio/gio-docs.xml: Include these

2007-12-17  Matthias Clasen <mclasen@redhat.com>

	* gio/gio-sections.txt: Updates

2007-12-14  Matthias Clasen <mclasen@redhat.com>

	* glib/tmpl/hash_tables.sgml:
	* glib/glib-sections.txt: Add hash iterator functions

2007-12-10  Matthias Clasen <mclasen@redhat.com>

	* gio/gio-sections.txt:
	* gio/gio-docs.xml:
	* gio/gio.types: Add gdesktopappinfo

2007-12-10  Bastien Nocera  <hadess@hadess.net>

	* glib/tmpl/keyfile.sgml: Mention the difference
	in handling booleans between GKeyFile and .INI files
	(Closes: #468882)

2007-12-10  Alexander Larsson  <alexl@redhat.com>

        * gio/Makefile.am:
	Remove more internal headers.
	
        * gio/gio-sections.txt:
	Update for changes

2007-12-10  Matthias Clasen  <mclasen@redhat.com>

	* gio/Makefile.am: Ignore gioalias.h
	* gio/gio-sections.txt: Updates

2007-12-07  Behdad Esfahbod  <behdad@gnome.org>

	* glib/tmpl/date.sgml: Fix tiny grammar typo.

2007-12-04  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/glib-sections.txt: Add GChecksum public API.

	* glib/tmpl/checksum.sgml:
	* glib/glib-docs.sgml: Add the checksums API page.

2007-11-29  Behdad Esfahbod  <behdad@gnome.org>

	Bug 500361 – Improve docs for g_array_free() and g_ptr_array_free()

	* glib/tmpl/arrays.sgml:
	* glib/tmpl/arrays_pointer.sgml:
	Document how to free the return value.

2007-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: More cleanup

	* gio/gio.types: Remove internal types

2007-11-27  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Remove nonexisting functions

2007-11-27  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Some additions

2007-11-27  Matthias Clasen  <mclasen@redhat.com>
